--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ Body{
     font-size: 16px;
     font-style: italic;
 }
-.post{
-    background: #fff;  
+.post {
+    background: #fff; 
+    padding: 10px; 
 }
