--- a/style.css
+++ b/style.css
@@ -13,5 +13,6 @@ Body{
 .post {
     background: #fff; 
     padding: 10px; 
-    border: 3px solid#000;
+    border: 3px solid #000;
+    margin: 10px;
 }
