--- a/style.css
+++ b/style.css
@@ -9,10 +9,22 @@ Body{
 .post_title{ 
     font-size: 16px;
     font-style: italic;
+    margin: 0;
+    margin-bottom: 15px;
 }
 .post {
     background: #fff; 
     padding: 10px; 
-    border: 3px solid #000;
-    margin: 10px;
+    border: 3px solid rgb(10, 8, 8);
+    margin-bottom: 15px;
+
+}
+
+.post_content{
+    margin: 0;
+    margin-bottom: 15px;
+}
+
+.post_image{
+    margin-bottom: 15px;
 }
