--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 Body{
     background: #ccc;
+    font-family: verdana;
 }
 
 #title, .subtitle, .post_title {
     color:blue
+}
+
+#title{
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+a{
+    text-decoration: line-through;
+    color: #505050;
 }
 
 .post_title{ 
