--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 Body{
     background: #ccc;
     font-family: verdana;
-    width: 900px;
+    max-width:900px;
     margin: auto;
 }
 
@@ -37,6 +37,8 @@ a{
 .post_content{
     margin: 0;
     margin-bottom: 15px;
+    text-transform: capitalize;
+    text-align: justify;
 }
 
 .post_image{
